[package]
name = "chashmap-serde"
version = "0.1.0"
authors = ["ticki <Ticki@users.noreply.github.com>","cubicle-jockey <cubicle-jockey@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API and Serde support."
repository = "https://github.com/cubicle-jockey/chashmap-serde.git"
documentation = "https://docs.rs/chashmap-serde"
#original author's repo and docs
#repository = "https://gitlab.redox-os.org/redox-os/chashmap"
#documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["hashmap", "concurrent", "parking_lot", "lock", "map", "serde"]
exclude = ["target", "Cargo.lock"]
edition = "2021"

[dependencies]
parking_lot = { version = "0.12.1", features = ["owning_ref"] }
owning_ref = "0.4"
serde = {version = "1.0.145", features = ["derive"]}

[dev-dependencies]
serde_json = {version = "1.0.85"} #only used by tests

